# treehole_daily

./: .dockerignore  .gitignore  Dockerfile  README.md  get_words.py  main.py  pyproject.toml  requirements.txt  world_cloud.py
.github/workflows/: main.yml
integration/: lark.py
